# weather

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  index.html  justfile
docs/: index.html  weather-13114ac34ae95a3e.js  weather-13114ac34ae95a3e_bg.wasm  weather-25159e884ff9afb6_bg.wasm  weather-36bdd8e6e0fd9f33.js  weather-36bdd8e6e0fd9f33_bg.wasm  weather-3847a73efeea2ba7.js  weather-3847a73efeea2ba7_bg.wasm  weather-46fd2923ed0bbbc6.js  weather-46fd2923ed0bbbc6_bg.wasm  weather-7a4e7583eea5e560.js  weather-7a4e7583eea5e560_bg.wasm  weather-82921ddfb3c1ab3e.js  weather-82921ddfb3c1ab3e_bg.wasm  weather-b8b35965f3ca9de2.js  weather-b8b35965f3ca9de2_bg.wasm  weather-ecedba4cf525bf66.js  weather-ecedba4cf525bf66_bg.wasm
src/: data.rs  main.rs
yr_visualization_files/: nrk-sans.min.css
