[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
leptos = { version = "0.5", features = ["csr"] }
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.34", features = ["rt", "rt-multi-thread"] }
